<?xml version="1.0" encoding="utf-8"?>
<!--
    Name                 Christopher Lynch
    Student ID           S1511825
    Programme of Study   Computing
 -->
<android.support.constraint.ConstraintLayout
    android:id="@+id/resultLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/result_background">

    <FrameLayout
        android:id="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:elevation="2dp"
        style="@style/BackButtonFrame">
        <ImageView style="@style/BackButtonImage"/>
    </FrameLayout>

    <ScrollView
        android:id="@+id/resultScrollView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/resultItemActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/mostNorthernTitle"
                style="@style/ResultTitleLayout">
                <TextView style="@style/ResultTitleText" android:text="@string/most_northern" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/mostEasternTitle"
                style="@style/ResultTitleLayout">
                <TextView style="@style/ResultTitleText" android:text="@string/most_eastern" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/mostSouthernTitle"
                style="@style/ResultTitleLayout">
                <TextView style="@style/ResultTitleText" android:text="@string/most_southern" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/mostWesternTitle"
                style="@style/ResultTitleLayout">
                <TextView style="@style/ResultTitleText" android:text="@string/most_western" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/largestMagnitudeTitle"
                style="@style/ResultTitleLayout">
                <TextView style="@style/ResultTitleText" android:text="@string/largest_magnitude" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/deepestEarthquakeTitle"
                style="@style/ResultTitleLayout">
                <TextView style="@style/ResultTitleText" android:text="@string/deepest_earthquake" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/shallowestEarthquakeTitle"
                style="@style/ResultTitleLayout"
                app:layout_constraintStart_toStartOf="parent">
                <TextView style="@style/ResultTitleText" android:text="@string/shallowest_earthquake" />
            </LinearLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:id="@+id/noMatchingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_matching"/>

    <TextView
        android:id="@+id/noMatchingStudent"
        app:layout_constraintTop_toBottomOf="@id/noMatchingText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student"
        android:textAlignment="center"/>

</android.support.constraint.ConstraintLayout>