<?xml version="1.0" encoding="utf-8"?>
<!--
    Name                 Christopher Lynch
    Student ID           S1511825
    Programme of Study   Computing
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/about_background">

    <TextView
        android:layout_gravity="center"
        android:id="@+id/moduleNameText"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module_name"/>

    <TextView
        android:layout_gravity="center"
        android:id="@+id/appNameText"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

    <TextView
        android:layout_gravity="center"
        android:id="@+id/studentText"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student"/>

</LinearLayout>