<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_launch">

    <TextView
        android:id="@+id/moduleHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="35dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintTop_toBottomOf="@+id/moduleHeading"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintBottom_toTopOf="@id/byStudent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/downXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="20sp"/>

        <ProgressBar
            android:id="@+id/downloadProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/byStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="20sp"/>

</android.support.constraint.ConstraintLayout>